# PhoneTTS

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  espeak_jni.cpp
app/src/main/cpp/cosyvoice/: CMakeLists.txt  cosyvoice_jni.cpp
app/src/main/kotlin/com/phonetts/app/: AppGraph.kt  MainActivity.kt  ModelStorage.kt  PhoneTtsApplication.kt  PrefsOverrideStore.kt  PrefsPreferenceStore.kt  StorageLocation.kt
app/src/main/kotlin/com/phonetts/app/audio/: AudioTrackSink.kt
app/src/main/kotlin/com/phonetts/app/automation/: AutomationIntent.kt  TtsAutomationActivity.kt
app/src/main/kotlin/com/phonetts/app/benchmark/: BenchmarkScreen.kt  BenchmarkViewModel.kt
app/src/main/kotlin/com/phonetts/app/compare/: CompareScreen.kt  CompareViewModel.kt
app/src/main/kotlin/com/phonetts/app/device/: DeviceInfo.kt
app/src/main/kotlin/com/phonetts/app/hf/: DownloadNotifier.kt  HfBrowseScreen.kt  HfBrowseUiState.kt  HfBrowseViewModel.kt  HfDownloader.kt  HttpUrlConnectionClient.kt
app/src/main/kotlin/com/phonetts/app/manage/: ModelManagementScreen.kt  ModelManagementViewModel.kt
app/src/main/kotlin/com/phonetts/app/playback/: GenerationNotifier.kt  PlaybackAudioFocus.kt  PlaybackChime.kt  PlaybackController.kt  PlaybackNotificationFactory.kt  PlaybackService.kt  PlaybackStateStore.kt  PlaybackWidgetProvider.kt  ResumeTileService.kt  SleepTimerRunner.kt
app/src/main/kotlin/com/phonetts/app/runtime/: CosyVoiceNative.kt  ExecuTorchRuntime.kt  GgmlTtsNative.kt  LiteRtRuntime.kt  LlamaCppNative.kt  LlamaCppSpeechTokenRuntime.kt  NativeCosyVoiceRuntime.kt  NativeGgmlTtsRuntime.kt  OnnxRuntime.kt  SystemTtsDiscovery.kt  SystemTtsEngine.kt  SystemTtsEngineProvider.kt  SystemTtsInit.kt  SystemTtsWavReader.kt
app/src/main/kotlin/com/phonetts/app/sideload/: SideloadCoordinator.kt
app/src/main/kotlin/com/phonetts/app/store/: FilesDurableStore.kt
app/src/main/kotlin/com/phonetts/app/text/: EspeakDataInstaller.kt  EspeakNative.kt  EspeakPhonemizer.kt  PassthroughPhonemizer.kt
app/src/main/kotlin/com/phonetts/app/textimport/: FileTextImporter.kt  ImportFileButton.kt  PdfTextExtractor.kt
app/src/main/kotlin/com/phonetts/app/ui/: HelpScreen.kt  MixVoicesScreen.kt  MixVoicesViewModel.kt  NavDrawerScaffold.kt  OnboardingScreen.kt  SettingsScreen.kt  TtsScreen.kt  TtsViewModel.kt
app/src/main/res/drawable/: ic_notification.xml
app/src/main/res/layout/: playback_widget.xml
app/src/main/res/xml/: playback_widget_info.xml
config/detekt/: detekt.yml
core/: build.gradle.kts
core/src/main/kotlin/com/phonetts/core/audio/: AudioSink.kt  Pcm16.kt  StreamingConsumer.kt  TransformingSink.kt  WavWriter.kt
core/src/main/kotlin/com/phonetts/core/automation/: AutomationPlanner.kt  AutomationRequest.kt
core/src/main/kotlin/com/phonetts/core/compare/: RosterDedup.kt  Tournament.kt  TournamentScheduling.kt
core/src/main/kotlin/com/phonetts/core/convert/: BundleTranscoder.kt  OnnxProtoWriter.kt  ProtoWriter.kt  SafetensorsReader.kt  TranscoderRegistry.kt
core/src/main/kotlin/com/phonetts/core/download/: DownloadStorageCap.kt  ManifestParser.kt  ModelManifest.kt  SafePath.kt  Sha256Verifier.kt
core/src/main/kotlin/com/phonetts/core/engine/: BlendableVoices.kt  BlendedVoiceCatalog.kt  EngineContext.kt  EngineMatch.kt  EngineProvider.kt  PlatformServices.kt  SynthesisParams.kt  TextFrontend.kt  Voice.kt  VoiceBlend.kt  VoiceEngine.kt
core/src/main/kotlin/com/phonetts/core/metrics/: BenchmarkEta.kt  BenchmarkHistory.kt  BenchmarkMetrics.kt  GenerationStats.kt  GenerationTracking.kt  ListeningTimeEstimator.kt  RtfEstimator.kt  ThermalRegressionDetector.kt  WordCounter.kt
core/src/main/kotlin/com/phonetts/core/model/: DeviceRamFit.kt  ManageModelFacts.kt  ModelBundle.kt  ModelDescriptor.kt  ModelListExport.kt  ModelParameter.kt  ResourceCost.kt
core/src/main/kotlin/com/phonetts/core/playback/: SleepTimer.kt
core/src/main/kotlin/com/phonetts/core/prefs/: AppThemePreference.kt  BlendedVoiceStore.kt  DefaultVoicePreference.kt  DocumentLibrary.kt  DocumentMemory.kt  FavoriteVoices.kt  LastUsedSelection.kt  LongDocumentPreferences.kt  OnboardingState.kt  PlaybackCuePreferences.kt  PreferenceStore.kt  ReadingTextPreferences.kt  ResourceUsageStore.kt  StorageLocationPreference.kt
docs/: BUILDING.md  COSYVOICE2.md  MODEL-VERIFICATION.md  MODELS.md  SPEC.md  espeak-ng-integration.md
docs/research/: chaquopy-torch-buildtime-2026-07.md  cosyvoice2-mobile.md  espeak-ng.md  hf-download.md  model-facts.md  model-triage-2026-07.md  neutts-facts.md  on-demand-python-2026-07.md  onnx-io.md  outetts-facts.md  pockettts-facts.md  runtime-feasibility-2026-07.md  supertonic-facts.md
engines/common/: build.gradle.kts
engines/executorch/: INTEGRATION.md  build.gradle.kts
engines/f5tts/: README-io.md  build.gradle.kts
engines/ggmltts/: INTEGRATION.md
engines/litert/: build.gradle.kts
engines/melotts/: build.gradle.kts
engines/mms/: build.gradle.kts
engines/neutts/: INTEGRATION.md
engines/outetts/: INTEGRATION.md
engines/piper/: build.gradle.kts
engines/pockettts/: INTEGRATION.md  build.gradle.kts
engines/pytorch/: INTEGRATION.md
engines/supertonic/: INTEGRATION.md  build.gradle.kts
gradle/: libs.versions.toml
integration/: build.gradle.kts
integration/src/test/cpp/: jvm_cosyvoice_jni.cpp
integration/src/test/kotlin/com/phonetts/integration/: AllEnginesDiscoveryTest.kt  AutoLoadIntegrationTest.kt  EspeakCliPhonemizer.kt  JvmCosyVoiceNative.kt  JvmNativeCosyVoiceRuntime.kt  JvmOnnxRuntime.kt  RealCosyVoiceAutoLoadTest.kt  RealModelAutoLoadTest.kt
keystore/: phonetts-debug.keystore
scripts/: fetch-cosyvoice-ggml.sh  fetch-cosyvoice-llama.sh  fetch-espeak-ng.sh  install-hooks.sh  pre-commit
scripts/model-verify/: build_jvm_cosyvoice.sh  cv3_native_driver.cpp  run_cosy.py  run_cosy_native.sh  run_kitten.py  run_kokoro.py  run_melo.py  run_melo2.py  run_piper.py
(+363 files in other folders)
